@@ -31,6 +31,14 @@
 | https://github.com/knative/client/pull/1406[#1406]
 
 | 🎁
+| Adding `--tls` option to domain create command
+| https://github.com/knative/client/pull/1419[#1419]
+
+| 🎁
+| Add an `client.knative.dev/updateTimestamp` annotation to trigger a new revision when required
+| https://github.com/knative/client/pull/1364[#1364]
+
+| 🎁
 | Adding `--class` flag to broker create command
 | https://github.com/knative/client/pull/1402[#1402]
 
